--- a/speakers.html
+++ b/speakers.html
@@ -9,7 +9,7 @@ description: PowerUp
 		<div class="black black-2 blue-gradient">
 			<span class="reverse-skew black-container">
 				<div>
-				<img src="../images/icons/create.svg" class="x-icon">
+				<img src="../images/icons/Create.svg" class="x-icon">
 				<h2> <span class="dotted-underline editable"> Speakers </span></h2>
 				<p>Some of the most impactful community organisers are lining up to speak at PowerUp. These Australian and international change-makers will bring you exclusive insights into the state of the nation and the world, and share their strategies for building the people-power to win. </p>
 					<p>Check out the first release of speakers below, and stay tuned for more announcements.
