--- a/speakers.html
+++ b/speakers.html
@@ -84,7 +84,7 @@ description: PowerUp
 			</h4>
 			<div class="dotted-underline"> </div>
 			<p class="speakers__blurb editable">
-				Ellen Roberts is the Queensland Lead Organiser for GetUp, handling campaign and other activities for GetUp in Brisbane. She joined GetUp in November 2015 after three years with the Mackay Conservation Group campaigning on coal mining and Reef protection. She was very involved with the Lady Cilento vigil for GetUp in February 2016, drawing on over a decade of experience working the refugees and asylum seekers in detention. Ellen has also been published widely in bird watching magazines.
+				Ellen Roberts is the Queensland Lead Organiser for GetUp, handling campaign and other activities for GetUp in Brisbane. She joined GetUp in November 2015 after three years with the Mackay Conservation Group campaigning on coal mining and Reef protection. She was very involved with the Lady Cilento vigil for GetUp in February 2016, drawing on over a decade of experience working the refugees and asylum seekers in detention.
 			</p>
 		</div>
 		
