faq, speakers changes

--- a/speakers.html
+++ b/speakers.html
@@ -36,7 +36,7 @@ description: PowerUp
 			</h4>
 			<div class="dotted-underline"> </div>
 			<p class="speakers__blurb editable">
-				Annie Kia is the community engagement coordinator for Lock The Gate Alliance, a national network-of-networks resisting invasive gasfields and coal. A great believer in collective intelligence, Annie applies network theory to movement-building. She co-developed the Gasfield Free Community process that helped achieve mass-movement dynamics in the Northern Rivers campaign.
+				Annie Kia is the community engagement coordinator for Lock The Gate Alliance, a national network-of-networks resisting invasive gasfields and coal. A great believer in collective intelligence, Annie applies network theory to movement-building. Anna Kia is the community engagement coordinator for Lock the Gate alliance, a national coalition resisting invasive gasfields and coal.
 			</p>
 		</div>
 		
@@ -51,7 +51,7 @@ description: PowerUp
 			</h4>
 			<div class="dotted-underline"> </div>
 			<p class="speakers__blurb editable">
-				Becky Bond is the co-author of “Rules for Revolutionaries: How Big Organizing Can Change Everything.” She served as a senior adviser on the Bernie Sanders 2016  presidential campaign, and was an architect of the campaign’s national, volunteer-driven grassroots campaign. After the 2016 presidential cycle, Becky founded the Big Organizing Project and is a pioneer in the use of distributed organizing to win advocacy and electoral campaigns.
+				Becky Bond is the co-author of “Rules for Revolutionaries: How Big Organizing Can Change Everything.” She served as a senior adviser on the Bernie Sanders 2016  presidential campaign, and was an architect of the campaign’s national, volunteer-driven grassroots campaign. After the 2016 presidential cycle, Becky founded the Big Organizing Project and is a pioneer in the use of distributed organising to win advocacy and electoral campaigns.
 			</p>
 		</div>
 		
@@ -84,7 +84,7 @@ description: PowerUp
 			</h4>
 			<div class="dotted-underline"> </div>
 			<p class="speakers__blurb editable">
-				Ellen Roberts is the Queensland Lead Organiser for GetUp, handling campaign and other activities for GetUp in Brisbane. She joined GetUp in November 2015 after three years with the Mackay Conservation Group campaigning on coal mining and Reef protection. She was very involved with the Lady Cilento vigil for GetUp in February 2016, drawing on over a decade of experience working the refugees and asylum seekers in detention.
+				Ellen Roberts is the Queensland Lead Organiser for GetUp, handling campaign and other activities for GetUp in Brisbane. She joined GetUp in November 2015 after three years with the Mackay Conservation Group campaigning on coal mining and Reef protection. She was very involved with the Lady Cilento vigil for GetUp in February 2016, drawing on over a decade of experience working with refugees and asylum seekers in detention.
 			</p>
 		</div>
 		
