--- a/speakers.html
+++ b/speakers.html
@@ -36,7 +36,7 @@ description: PowerUp
 			</h4>
 			<div class="dotted-underline"> </div>
 			<p class="speakers__blurb editable">
-				Annie Kia is the community engagement coordinator for Lock The Gate Alliance, a national network-of-networks resisting invasive gasfields and coal. A great believer in collective intelligence, Annie applies network theory to movement-building. Anna Kia is the community engagement coordinator for Lock the Gate alliance, a national coalition resisting invasive gasfields and coal.
+				Anna Kia is the community engagement coordinator for Lock The Gate Alliance, a national coalition resisting invasive gasfields and coal. A great believer in collective intelligence, Annie applies network theory to movement-building. She co-developed the Gasfield Free Community process that helped achieve mass-movement dynamics in the Northern Rivers campaign.
 			</p>
 		</div>
 		
