--- a/faqs.html
+++ b/faqs.html
@@ -334,6 +334,19 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             </div>
             <div class="faq-underline"></div>
 
+             <!--QUESTION-->
+            <a class="_accordion slab">
+               Can I fill up my water bottle at the venue?
+            </a>
+            <!--ANSWER-->
+            <div class="panel">
+                <p>
+                    Yes! It’s recommended that you bring along your water bottle and fill it up throughout the day. There are quite a few water bubblers around the campus, and you can also fill up your water bottle in the bathrooms. If you need to, it’s also possible to purchase water on the day in the nearby food court.
+                </p>
+            </div>
+           
+            <div class="faq-underline"></div>
+
 
 <!---------------------------------------------------------------->
             <!--TRAVEL-->
