--- a/faqs.html
+++ b/faqs.html
@@ -325,7 +325,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
 
 <!---------------------------------------------------------------->
             <!--TRAVEL-->
-            <h3 class="faq-subheading"> Travel &amp; Accomodation </h3>
+            <h3 class="faq-subheading"> Travel &amp; Accommodation </h3>
 
             <!--QUESTION-->
             <a class="_accordion slab">
