--- a/speakers.html
+++ b/speakers.html
@@ -80,11 +80,11 @@ description: PowerUp
 				Ellen Roberts
 			</h3>
 			<h4 class="speakers__position slab editable">
-				Lead Organiser for GetUp
+				Lead Organiser for GetUp!
 			</h4>
 			<div class="dotted-underline"> </div>
 			<p class="speakers__blurb editable">
-				Ellen Roberts is the Queensland Lead Organiser for GetUp, handling campaign and other activities for GetUp in Brisbane. She joined GetUp in November 2015 after three years with the Mackay Conservation Group campaigning on coal mining and Reef protection. She was very involved with the Lady Cilento vigil for GetUp in February 2016, drawing on over a decade of experience working with refugees and asylum seekers in detention.
+				Ellen Roberts is the Queensland Lead Organiser for GetUp!, handling campaign and other activities for GetUp in Brisbane. She joined GetUp in November 2015 after three years with the Mackay Conservation Group campaigning on coal mining and Reef protection. She was very involved with the Lady Cilento vigil for GetUp in February 2016, drawing on over a decade of experience working with refugees and asylum seekers in detention.
 			</p>
 		</div>
 		
@@ -162,11 +162,11 @@ description: PowerUp
 				Miriam Lyons
 			</h3>
 			<h4 class="speakers__position slab editable">
-				Environmental Justice Campaign Director, GetUp
+				Environmental Justice Campaign Director, GetUp!
 			</h4>
 			<div class="dotted-underline"> </div>
 			<p class="speakers__blurb editable">
-				Miriam Lyons is an Australian policy analyst, writer and commentator, and currently Environmental Justice Campaigns Director at GetUp. She is a co-author of Governomics, published by Melbourne University Press. Miriam is also a Fellow of the Centre for Policy Development, a public-interest think tank which she co-founded. She has been a regular guest on the ABC shows Q&amp;A and The Drum, has contributed to several media outlets and co-edited the books Pushing Our Luck and More Than Luck.
+				Miriam Lyons is an Australian policy analyst, writer and commentator, and currently Environmental Justice Campaigns Director at GetUp! She is a co-author of Governomics, published by Melbourne University Press. Miriam is also a Fellow of the Centre for Policy Development, a public-interest think tank which she co-founded. She has been a regular guest on the ABC shows Q&amp;A and The Drum, has contributed to several media outlets and co-edited the books Pushing Our Luck and More Than Luck.
 			</p>
 		</div>
 		
