--- a/speakers.html
+++ b/speakers.html
@@ -170,11 +170,34 @@ description: PowerUp
 			</p>
 		</div>
 		
-        
-		
-		
 
-		
+				<div class="small-12 medium-6 large-4 columns speaker">
+			<img src="../images/Dir-Paul-bw.jpg" class="speakers__img">
+			<h3 class="speakers__name normal editable">
+				Paul Oosting
+			</h3>
+			<h4 class="speakers__position slab editable">
+				National Director, GetUp!
+			</h4>
+			<div class="dotted-underline"> </div>
+			<p class="speakers__blurb editable">
+				Paul Oosting is the National Director of GetUp, a one million strong member-driven organisation that has campaigned for progressive policy in Australia for a decade. Before joining GetUp, Paul led the successful campaign to stop Gunns' proposed pulp mill in Tasmania. The campaign resulted in the protection of over 160,000 hectares of Tasmania's ancient forests.
+			</p>
+		</div>
+
+		<div class="small-12 medium-6 large-4 columns speaker">
+			<img src="../images/Liuanga-Headshot-bw.jpg" class="speakers__img">
+			<h3 class="speakers__name normal editable">
+				Liuanga Palu
+			</h3>
+			<h4 class="speakers__position slab editable">
+				Pacific Community Organiser
+			</h4>
+			<div class="dotted-underline"> </div>
+			<p class="speakers__blurb editable">
+				Liuanga joined the Pacific Climate movement in Sydney in the lead up to the People’s climate march in 2015, when she helped organise a contingent of over 1000 people from the Pacific diaspora. Since then she has been working closely with religious, environmental and community leaders in Sydney around a new grass-roots initiative called the ‘Talanoa4Climate”; which aims to help our Pacific diaspora communities across Australia Talanoa or be in dialogue about Climate Change.
+			</p>
+		</div>
   
 
 </div>
