added more faqs

--- a/faqs.html
+++ b/faqs.html
@@ -334,13 +334,15 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <!--ANSWER-->
             <div class="panel">
                 <p style="margin-bottom: 0">
-                    If you can, book your flights and accommodation as soon as possible. Footy finals will be on in Sydney on the 23-24 September weekend, so prices will likely go up the closer it gets to the date. <br><br>
-                    It’s a good idea to search online for the cheapest flight and there are many sites that compare the price of flights across all airlines. Two suggestions are
+                    It’s a good idea to search online for the cheapest flight. There are many sites that compare the price of flights across all airlines, two of which are:                 
                 </p>
                 <ul style="padding-left: 20px;">
                     <li><a href="www.skyscanner.com" class="blue"> www.skyscanner.com </a></li>
                     <li><a href="www.webjet.com.au" class="blue">www.webjet.com.au</a></li> 
-                 </ul>   
+                 </ul>
+                 <p>
+                 Accommodation rates will rise the closer we get to September. So, if you’re tossing up whether you can attend, or waiting to find out if you can find free accommodation, one idea is to book a reasonably priced room now that has a flexible, risk-free cancellation policy. It's possible to find rooms you can cancel within a few days of the booked date on sites such as: <a href="http://booking.com.au" class="blue" target="_blank">Booking.com</a>, <a href="http://airbnb.com" class="blue" target="_blank">Airbnb</a> and <a href="http://wotif.com.au" class="blue" target="_blank">Wotif</a>.
+                 </p>   
             </div>
 
             <div class="faq-underline"></div>
@@ -384,19 +386,52 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
 
              <!--QUESTION-->
             <a class="_accordion slab">
-               WANTED / OFFERED: Free spare room in Sydney
+               ABLE TO OFFER A SPARE ROOM IN SYDNEY?
             </a>
             <!--ANSWER-->
             <div class="panel ">
                 <p>
-                   Do you have a spare room in Sydney you’d be happy to offer an interstate PowerUp attendee? Alternatively, are you travelling interstate and looking for a free room in Sydney to keep down costs?
-<br><br>
-PowerUp is building a simple site that will connect spare rooms in Sydney with attendees looking for one. 
-<br><br>
-If you’ve got a room to offer, all you’ll have to do is list the suburb, occupancy of the room and your contact details. Then all you have to do is wait for an introductory email from a fellow PowerUp attendee. It’s then up to you to offer them the room, and pass on more details. 
-<a href="https://goo.gl/forms/ZYR9ECyU96yj459j2" class="blue" target="_blank"> 
-Register your interest here now to offer or take up a spare room and we’ll get back to you when the site is live. </a>
+                    Do you have a spare room in Sydney you’d be happy to offer an interstate PowerUp attendee?
+                    <br><br>
+                    It's incredibly expensive for interstate members to attend. There's flights, accommodation, and all the other costs involved in being away from home. Understandably, many people would like to attend but are struggling with the finances. 
+                    <br><br>
+                    To help make PowerUp more affordable, GetUp has developed a simple <a href="http://rooms.powerup.org.au/available_rooms" class="blue" target="_blank">Spare Rooms Directory.</a> 
+                    <br><br>
+                    This directory allows Sydney GetUp members to list their spare room online and interstate attendees can request to stay. You make arrangements that work for you, and then host them on the 23-24 September weekend. It's as simple as that! 
+                    <br><br>
+                    <a href="https://goo.gl/forms/ZYR9ECyU96yj459j2" class="blue" target="_blank"> 
+                    Do you have a spare room in Sydney you could list on the PowerUp Directory? Register it here. 
+                    </a>
+                    <br><br>
+                    The more Sydneysiders who can offer a spare room, the more interstate members who can afford to travel to PowerUp. Many interstate members are hinging their decision to attend on a spare room offer, so if you do have a spare room to offer please list it as soon as you're able. 
+                    <br><br>
+                    <b>Registering your room is easy, all you have to do is:</b>
+                    <ol>
+                        <li> <a href="http://rooms.powerup.org.au/become_a_host" class="blue" target="_blank">Register your room here in less than 2 minutes</a></li>
+                        <li>Wait for a prospective guest to contact you</li>
+                        <li>Approve their stay!</li>
+                    </ol>
+                </p>
+            </div>
 
+
+             <div class="faq-underline"></div>
+
+
+             <!--QUESTION-->
+            <a class="_accordion slab">
+               LOOKING FOR A SPARE ROOM IN SYDNEY?
+            </a>
+            <!--ANSWER-->
+            <div class="panel ">
+                <p>
+                    Are you travelling interstate and looking for a free room in Sydney to keep down costs? PowerUp has built a simple site that will connect folks looking for a spare room with Sydney GetUp members offering spare rooms. 
+                    <br><br>
+                    <a href="http://rooms.powerup.org.au/available_rooms" class="blue" target="_blank">View our spare rooms directory here and get in touch with some generous hosts!</a>
+                    <br><br>
+                    We hope you find a spare room, but unfortunately there are no guarantees. Please make a contingency plan as soon as possible to avoid disappointment. 
+                    <br><br>
+                    Accommodation rates will rise the closer we get to September, so one idea is to book a reasonably priced room now that has a flexible, risk-free cancellation policy. It's possible to find rooms you can cancel within a few days of the booked date on sites such as: <a href="http://booking.com.au" class="blue" target="_blank">Booking.com</a>, <a href="http://airbnb.com" class="blue" target="_blank">Airbnb</a> and <a href="http://wotif.com.au" class="blue" target="_blank">Wotif</a>.
                 </p>
             </div>
 
