powerup faq program update

--- a/faqs.html
+++ b/faqs.html
@@ -395,11 +395,11 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
                     <br><br>
                     It's incredibly expensive for interstate members to attend. There's flights, accommodation, and all the other costs involved in being away from home. Understandably, many people would like to attend but are struggling with the finances. 
                     <br><br>
-                    To help make PowerUp more affordable, GetUp has developed a simple <a href="http://rooms.powerup.org.au/available_rooms" class="blue" target="_blank">Spare Rooms Directory.</a> 
+                    To help make PowerUp more affordable, GetUp has developed a simple <a href="http://rooms.powerup.org.au/available_rooms?t=NOT_AVAILABLE&utm_content=18631&utm_campaign=Have_a_spare_room_in_Sydney_for_PowerUp_&utm_source=blast&utm_medium=email" class="blue" target="_blank">Spare Rooms Directory.</a> 
                     <br><br>
                     This directory allows Sydney GetUp members to list their spare room online and interstate attendees can request to stay. You make arrangements that work for you, and then host them on the 23-24 September weekend. It's as simple as that! 
                     <br><br>
-                    <a href="https://goo.gl/forms/ZYR9ECyU96yj459j2" class="blue" target="_blank"> 
+                    <a href="http://rooms.powerup.org.au/become_a_host?t=NOT_AVAILABLE&utm_content=18631&utm_campaign=Have_a_spare_room_in_Sydney_for_PowerUp_&utm_source=blast&utm_medium=email" class="blue" target="_blank"> 
                     Do you have a spare room in Sydney you could list on the PowerUp Directory? Register it here. 
                     </a>
                     <br><br>
@@ -407,7 +407,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
                     <br><br>
                     <b>Registering your room is easy, all you have to do is:</b>
                     <ol>
-                        <li> <a href="http://rooms.powerup.org.au/become_a_host" class="blue" target="_blank">Register your room here in less than 2 minutes</a></li>
+                        <li> <a href="http://rooms.powerup.org.au/become_a_host?t=NOT_AVAILABLE&utm_content=18631&utm_campaign=Have_a_spare_room_in_Sydney_for_PowerUp_&utm_source=blast&utm_medium=email" class="blue" target="_blank">Register your room here in less than 2 minutes</a></li>
                         <li>Wait for a prospective guest to contact you</li>
                         <li>Approve their stay!</li>
                     </ol>
