--- a/landing.html
+++ b/landing.html
@@ -25,13 +25,17 @@ After people signed the dotted line, they're hit with oppressive rules, cripplin
 	<img src="../images/programs-new.jpg" class="speakers-hero-image">
 	</div>
 </div>-->
-<div class="gradientgradient blue-gradient"></div>
+<!--<div class="gradientgradient blue-gradient"></div>-->
 <!--<img src="../images/programs-new.jpg" class="landing-img">-->
+<div class="home-hero landing-hero-container">
+	<img src="../images/hero.jpg" class="home-hero-image landing-hero" />
 
+</div>
 <div class="row landing faq-container">
-	<div class="small-6 columns">
+	<div class="small-12 medium-6 columns">
 		<div>
-            <h2> <span class="dotted-underline "> It's Time to Revoke Adani's Approval! </span></h2>
+			<img src="../images/Powerup_Logo-orange.png">
+            <h2> It's Time to Revoke Adani's Approval!</h2>
             
             <p>
             <br>
@@ -41,7 +45,7 @@ After people signed the dotted line, they're hit with oppressive rules, cripplin
             </p>
 		</div>
 	</div>
-    <div class="small-6 columns">
+    <div class="small-12 medium-6 columns">
 
             <div id="cta"></div>
 <script src="https://d68ej2dhhub09.cloudfront.net/scripts/embed.js" data-container="cta" data-stylesheet="https://d68ej2dhhub09.cloudfront.net/scripts/embed.css" data-url="https://showcase.getup.org.au/campaigns/sidebox-test/powerup-test/powerup"></script>
