--- a/landing.html
+++ b/landing.html
@@ -28,27 +28,36 @@ After people signed the dotted line, they're hit with oppressive rules, cripplin
 <!--<div class="gradientgradient blue-gradient"></div>-->
 <!--<img src="../images/programs-new.jpg" class="landing-img">-->
 <div class="home-hero landing-hero-container">
-	<img src="../images/hero.jpg" class="home-hero-image landing-hero" />
+	<img src="../images/landinglanding.jpg" class="home-hero-image landing-hero" />
 
 </div>
 <div class="row landing faq-container">
 	<div class="small-12 medium-6 columns">
 		<div>
 			<img src="../images/Powerup_Logo-orange.png">
-            <h2> It's Time to Revoke Adani's Approval!</h2>
-            
-            <p>
+            <h2> Keen to come to PowerUp but want more info? </h2>
             <br>
-            A joint Fairfax Media-Four Corners investigation earlier this week uncovered the abuse of thousands of elderly Australians, locked into financial prisons by retirement village operators rorting millions of dollars from residents.1 
-<br><br>
-After people signed the dotted line, they're hit with oppressive rules, crippling fees, and lengthy delays in dealing with health and safety issues. 
-            </p>
+            <p>
+				PowerUp is a practical training conference that will skill up 1000 everyday people to take down the Adani coal mine and other injustices through local community organising. PowerUp is the landmark national training conference for GetUp — Australia’s largest campaigning community of over one-million members.
+				<br> <br>
+				<b>What:</b> PowerUp Training Conference<br>
+				<b>When:</b> Saturday 23 - Sunday 24 September<br>
+				<b>Where:</b> UNSW, Sydney<br>
+				<b>Tickets:</b> <a href="http://powerup.org.au/ticket/" class="blue"> $70 concession, $90 full-priced</a><br>
+				<b>Got a question?</b> Check out the <a href="http://powerup.org.au/faqs/" class="blue">FAQ page</a><br>
+				<br>
+				Enter your details on the right to receive more information about PowerUp, or <a href="http://powerup.org.au/ticket/" class="blue">click here to secure your place at PowerUp now.</a>
+				<br><br>
+				At PowerUp, you'll develop practical organising skills and grassroots strategy in engaging, interactive workshops, and be inspired by some of Australia and the world's most preeminent community organisers like Sally McManus (ACTU Secretary), Becky Bond (Bernie Sanders Election Campaign Advisor) and more.
+				<br><br>
+				Most importantly, you'll build lasting relationships with locals from your home electorate and gain a supportive network to take action with moving forward. 
+				</p>
 		</div>
 	</div>
     <div class="small-12 medium-6 columns">
 
             <div id="cta"></div>
-<script src="https://d68ej2dhhub09.cloudfront.net/scripts/embed.js" data-container="cta" data-stylesheet="https://d68ej2dhhub09.cloudfront.net/scripts/embed.css" data-url="https://showcase.getup.org.au/campaigns/sidebox-test/powerup-test/powerup"></script>
+<script src="https://d68ej2dhhub09.cloudfront.net/scripts/embed.js" data-container="cta" data-stylesheet="https://d68ej2dhhub09.cloudfront.net/scripts/embed.css" data-url="https://www.getup.org.au/campaigns/powerup/powerup-landing/powerup-landing"></script>
             </div>
     </div>
 	</div>
