updated landing page

--- a/learn-more.html
+++ b/learn-more.html
@@ -7,9 +7,13 @@ description: PowerUp
 
 </div>
 <div class="row landing faq-container">
-	<div class="small-12 medium-6 columns">
+	<div class="small-12 medium-6 hide-for-medium show-for-small-only columns">
+		<img src="../images/Powerup_Logo-orange.png">
+	</div>
+	
+	<div class="small-12 medium-6 small-order-2 medium-order-1 columns">
 		<div>
-			<img src="../images/Powerup_Logo-orange.png">
+			<img src="../images/Powerup_Logo-orange.png" class="hide-for-small-only">
             <h2> Keen to come to PowerUp but want more info? </h2>
             <br>
             <p>
@@ -21,7 +25,7 @@ description: PowerUp
 				<b>Tickets:</b> <a href="http://powerup.org.au/ticket/" class="blue"> $70 concession, $90 full-priced</a><br>
 				<b>Got a question?</b> Check out the <a href="http://powerup.org.au/faqs/" class="blue">FAQ page</a><br>
 				<br>
-				Enter your details on the right to receive more information about PowerUp, or <a href="http://powerup.org.au/ticket/" class="blue">click here to secure your place at PowerUp now.</a>
+				<b>Enter your details on the right to receive more information about PowerUp, or <a href="http://powerup.org.au/ticket/" class="blue">click here to secure your place at PowerUp now.</a></b>
 				<br><br>
 				At PowerUp, you'll develop practical organising skills and grassroots strategy in engaging, interactive workshops, and be inspired by some of Australia and the world's most preeminent community organisers like Sally McManus (ACTU Secretary), Becky Bond (Bernie Sanders Election Campaign Advisor) and more.
 				<br><br>
@@ -29,7 +33,7 @@ description: PowerUp
 				</p>
 		</div>
 	</div>
-    <div class="small-12 medium-6 columns">
+    <div class="small-12 medium-6 small-order-1 medium-order-2 columns">
 
             <div id="cta"></div>
 <script src="https://d68ej2dhhub09.cloudfront.net/scripts/embed.js" data-container="cta" data-stylesheet="https://d68ej2dhhub09.cloudfront.net/scripts/embed.css" data-url="https://www.getup.org.au/campaigns/powerup/powerup-landing/powerup-landing"></script>
