--- a/learn-more.html
+++ b/learn-more.html
@@ -25,7 +25,7 @@ description: PowerUp
 				<b>Tickets:</b> <a href="http://powerup.org.au/ticket/" class="blue"> $70 concession, $90 full-priced</a><br>
 				<b>Got a question?</b> Check out the <a href="http://powerup.org.au/faqs/" class="blue">FAQ page</a><br>
 				<br>
-				<b>Enter your details on the right to receive more information about PowerUp, or <a href="http://powerup.org.au/ticket/" class="blue">click here to secure your place at PowerUp now.</a></b>
+				<b>Enter your details in the module to receive more information about PowerUp, or <a href="http://powerup.org.au/ticket/" class="blue">click here to secure your place at PowerUp now.</a></b>
 				<br><br>
 				At PowerUp, you'll develop practical organising skills and grassroots strategy in engaging, interactive workshops, and be inspired by some of Australia and the world's most preeminent community organisers like Sally McManus (ACTU Secretary), Becky Bond (Bernie Sanders Election Campaign Advisor) and more.
 				<br><br>
