second tickets page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@ id: home
 ---
 
 <a href="/ticket/" class="button home-hero-button  fixed-button" id="fixed-button" data-modaldesc="">Buy Ticket</a>
-<div class="white-bg">
-		</div>
-		<div class="gradientgradient"></div>
+<div class="white-bg"></div>
+<div class="gradientgradient"></div>
 
 
 <div class="home-hero">
