--- a/fired-up.html
+++ b/fired-up.html
@@ -3,7 +3,7 @@ title: 'Fired Up - PowerUp!'
 description: PowerUp
 ---
 
-<img src="../images/landinglanding.jpg" class="home-hero-image landing-hero" style="z-index:-10; height: 100%;"/>
+<img src="../images/home_background.jpg" class="home-hero-image landing-hero" style="z-index:-10; height: 100%;"/>
 <div class="row ticket" style="background: rgba(255,255,255,0.95)">
         <div class="small-12 medium-10 medium-offset-1 columns video-embed" style="padding:10px; margin-top: 40px;">
         <div class="videoWrapper">
@@ -18,7 +18,7 @@ description: PowerUp
             <li style="padding-bottom: 10px;"> Our MCs are Julian Morrow, Charles Firth, and Ben Jenkins from the
                 <i>The Chaser.</i> </li>
             <li style="padding-bottom: 10px;"> You’ll hear from Sally McManus (ACTU Secretary), Becky Bond (Bernie Sanders Election Advisor) and <a href="https://powerup.org.au/speakers/"
-                    style="color:#2098f5">more</a></li>
+                    style="color:#2098f5">more.</a></li>
             <li style="padding-bottom: 10px;">
                 You’ll learn how to take down the Adani coal mine and other injustices through local community organising.</li>
             <li style="padding-bottom: 10px;">
