copy change: switch to register interest

--- a/ticket.html
+++ b/ticket.html
@@ -22,7 +22,7 @@ description: PowerUp
             <br><br>
             If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. 
             <br><br>
-            <b>PowerUp is held at the University of NSW in Sydney. Spaces are limited and will sell-out, so please purchase your ticket now to avoid missing out.</b>
+            <b>PowerUp is held at the University of NSW in Sydney. Spaces are limited and will sell-out, so please register your interest now to avoid missing out.</b>
         </p>
     </div>
 
