make tickets & buy now page editable

--- a/buy_now.html
+++ b/buy_now.html
@@ -7,14 +7,14 @@ description: PowerUp
 
 <div class="row ticket" style="background: rgba(255,255,255,0.8)">
     <div class="small-12 columns">
-        <h2>Join us at PowerUp!</h2>
+        <h2 class="editable">Join us at PowerUp!</h2>
     </div>
     <div class="small-12 medium-6 columns video-embed">
         <div class="videoWrapper">
             <iframe width="100%"  src="https://www.youtube.com/embed/MmiDkZfk-zM" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
-    <div class="small-12 medium-6 columns">
+    <div class="small-12 medium-6 columns editable">
         <h4>Join us at PowerUp, GetUp’s first national conference in Sydney on 23-24 September.</h4>
         <p>
             <br>
