--- a/ticket.html
+++ b/ticket.html
@@ -1,5 +1,5 @@
 ---
-title: 'Grab My Ticket'
+title: Grab My Ticket
 description: PowerUp
 ---
 
@@ -11,25 +11,15 @@ description: PowerUp
     </div>
     <div class="small-12 medium-6 columns video-embed">
         <div class="videoWrapper">
-            <iframe width="100%"  src="https://www.youtube.com/embed/MmiDkZfk-zM" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" src="https://www.youtube.com/embed/MmiDkZfk-zM" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
-    <div class="small-12 medium-6 columns editable">
-        <h4>Join us at PowerUp, GetUp’s first national conference in Sydney on 23-24 September.</h4>
-        <p>
-            <br>
-            At PowerUp, you will join one thousand passionate GetUp members for a weekend of skills workshops, relationship-building and strategy sessions. Together, we’ll launch a national network of GetUp Action Groups and make a plan to retake power for everyday people.
-            <br><br>
-            If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. 
-            <br><br>
-            <b>PowerUp is held at the University of NSW in Sydney. Spaces are limited and will sell-out, so please purchase your ticket now to avoid missing out.</b>
-        </p>
-    </div>
+    <div class="small-12 medium-6 columns editable"><h4>Join us at PowerUp, GetUp&rsquo;s first national training event on 23-24 September at the University of NSW, Sydney&nbsp;</h4><p><br />At PowerUp, you will join one thousand passionate GetUp members for a weekend of skills workshops, relationship-building and strategy sessions. Together, we&rsquo;ll launch a national network of GetUp Action Groups and make a plan to retake power for everyday people.<br /><br />If you want to get the skills, tools and connections to make a difference and you&rsquo;re ready to take action, then we need you at PowerUp.<br /><br /><b>Spaces are limited and will sell-out, so please purchase your ticket now to avoid missing out.</b></p></div>
 
     <div class="medium-12 small-12 columns">
         <style type="text/css">iframe{width:100%}</style><p>
         <iframe src="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" style="height: 100vh; border:none; margin-top: -70px;"></iframe>
         <script type="text/javascript" src="https://ticketbooth.azurewebsites.net/scripts/iframeResizer.min.js"></script>
         <script>iFrameResize({log:true})</script>
-    </div>
+    </p></div>
 </div>
