Revert "fix content overlap & editor click problems"
This reverts commit c3199ead2fd4ce039a18e5c062511d02834af8df.

--- a/ticket.html
+++ b/ticket.html
@@ -18,7 +18,7 @@ description: PowerUp
 
     <div class="medium-12 small-12 columns">
         <style type="text/css">iframe{width:100%}</style><p>
-        <iframe src="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" style="height: 100vh; border:none;"></iframe>
+        <iframe src="https://ticketbooth.azurewebsites.net/poweruptickets.aspx" style="height: 100vh; border:none; margin-top: -70px;"></iframe>
         <script type="text/javascript" src="https://ticketbooth.azurewebsites.net/scripts/iframeResizer.min.js"></script>
         <script>iFrameResize({log:true})</script>
     </p></div>
