Updated 'faqs.html' via CloudCannon

--- a/faqs.html
+++ b/faqs.html
@@ -13,7 +13,7 @@ description: FAQ
         
         <div class="faq-container">
 
-        <div><a href="#" id="expand" class="expandall editable" style=""> <span>Expand all</span> </a></div>
+        <div><a href="#" id="expand" class="expandall editable"> <span>Expand all</span> </a></div>
             <!---------------------------------------------------------------->
             <!--TICKET-->
             <h3 class="faq-subheading editable"> PowerUp </h3>
@@ -25,9 +25,9 @@ description: FAQ
             <div class="panel editable">
                 <p>
                     For too long, self-serving corporations and right-wing power brokers have captured our democracy, making inequality worse and ravaging our environment. We need to build a new form of power that breaks this hold.
-<br><br>
+<br /><br />
 Securing a safe world for future generations is going to come down to us — and we’re going to have to step up now. At PowerUp, you will converge with a thousand passionate GetUp members for a weekend of shared values, practical skills workshops and strategy sessions. Then together we’ll launch a new national network of Action Groups that can take back power for everyday people. 
-<br><br>
+<br /><br />
 If you want to get the skills, tools and connections to make a difference and you’re ready to take action, then we need you at PowerUp. <a class="blue" href="/ticket/">Buy your ticket now.</a>
                 </p>
             </div>
@@ -54,9 +54,9 @@ If you want to get the skills, tools and connections to make a difference and yo
             <div class="panel editable">
                 <p>
                     Your PowerUp experience will focus on practical skills building, campaign strategy and community organising fundamentals.
-<br><br>
+<br /><br />
 During workshops, you’ll learn about taking on leadership roles in your community, how to build and sustain effective groups, and other critical organising skills. At all-in plenaries, you’ll learn about GetUp’s strategy to scale up people-power in Australia, and how you can play a key role in it. 
-<br><br>
+<br /><br />
 Perhaps most importantly, you’ll build meaningful connections with other attendees from your home electorate that could form the basis for a local Action Group.
                 </p>
             </div>
@@ -94,13 +94,7 @@ Perhaps most importantly, you’ll build meaningful connections with other atten
                 I’m passionate about attending PowerUp but can’t afford it. Does PowerUp offer any financial assistance?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                   As a Sydney-based conference, we recognise that the cost of a ticket, accommodation and travel can be especially prohibitive for interstate folk. We also acknowledge that the rising cost of living has put a strain on many households.
-<br><br>
-PowerUp has put aside a limited scholarship fund. If you're passionate about attending PowerUp but need some help, <a href="http://www.surveygizmo.com/s3/3549361/PowerUp-Scholarship-Application" class="blue" target="_blank">please fill out this confidential application form.</a>
-                </p>
-            </div>
+            <div class="panel editable"><p>As a Sydney-based conference, we recognise that the cost of a ticket, accommodation and travel can be especially prohibitive for interstate folk. We also acknowledge that the rising cost of living has put a strain on many households.<br /><br />PowerUp has put aside a limited scholarship fund. If you're passionate about attending PowerUp but need some help, <a class="blue" target="_blank" href="http://www.surveygizmo.com/s3/3549361/PowerUp-Scholarship-Application">please fill out this confidential application form.</a></p></div>
 
             <div class="faq-underline"></div>
 
@@ -226,11 +220,7 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
                 Does the ticket need to match the name and details of the holder?
             </a>
             <!--ANSWER-->
-            <div class="panel editable">
-                <p>
-                   Yes! It’s really important that each attendee has had their details recorded against a ticket. That’s because each ticket holder will be sent a registration pack in the post and will be allocated to a program pathway based upon their location. So, if you’ve entered the same details against multiple tickets, please <a href="mailto:powerup@getup.org.au" class="blue">email powerup@getup.org.au</a> to update.
-                </p>
-            </div>
+            <div class="panel editable"><p>Yes! It&rsquo;s really important that each attendee has had their details recorded against a ticket. That&rsquo;s because each ticket holder will be sent a registration pack in the post and will be allocated to a program pathway based upon their location. So, if you&rsquo;ve entered the same details against multiple tickets, please <a class="blue" href="mailto:powerup@getup.org.au">email powerup@getup.org.au</a> to update</p></div>
 
             <div class="faq-underline"></div>
 
@@ -355,9 +345,9 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <div class="panel editable">
                 <p style="margin-bottom: 0">
                     If you’re only in town for PowerUp then it might suit you to book accommodation as close to UNSW as possible. Central Sydney is only a 5 km bus ride from UNSW and offers a wide range of affordable accommodation options. Alternatively, Coogee Beach is just 3km down the road and has a range of accommodation to choose from. 
-                    <br><br>
+                    <br /><br />
                     We’ve listed a variety of options below, however if you would like more specific information or would like to chat directly with a PowerUp officer email <a href="mailto:powerup@getup.org.au" class="blue">powerup@getup.org.au</a>.
-                    <br><br>
+                    <br /><br />
                     Here are a few online accommodation search engines you could try: 
                 </p>
                     <ul style="padding-left: 20px;">
@@ -392,19 +382,19 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <div class="panel editable">
                 <p>
                     Do you have a spare room in Sydney you’d be happy to offer an interstate PowerUp attendee?
-                    <br><br>
+                    <br /><br />
                     It's incredibly expensive for interstate members to attend. There's flights, accommodation, and all the other costs involved in being away from home. Understandably, many people would like to attend but are struggling with the finances. 
-                    <br><br>
+                    <br /><br />
                     To help make PowerUp more affordable, GetUp has developed a simple <a href="http://rooms.powerup.org.au/available_rooms?t=NOT_AVAILABLE&utm_content=18631&utm_campaign=Have_a_spare_room_in_Sydney_for_PowerUp_&utm_source=blast&utm_medium=email" class="blue" target="_blank">Spare Rooms Directory.</a> 
-                    <br><br>
+                    <br /><br />
                     This directory allows Sydney GetUp members to list their spare room online and interstate attendees can request to stay. You make arrangements that work for you, and then host them on the 23-24 September weekend. It's as simple as that! 
-                    <br><br>
+                    <br /><br />
                     <a href="http://rooms.powerup.org.au/become_a_host?t=NOT_AVAILABLE&utm_content=18631&utm_campaign=Have_a_spare_room_in_Sydney_for_PowerUp_&utm_source=blast&utm_medium=email" class="blue" target="_blank"> 
                     Do you have a spare room in Sydney you could list on the PowerUp Directory? Register it here. 
                     </a>
-                    <br><br>
+                    <br /><br />
                     The more Sydneysiders who can offer a spare room, the more interstate members who can afford to travel to PowerUp. Many interstate members are hinging their decision to attend on a spare room offer, so if you do have a spare room to offer please list it as soon as you're able. 
-                    <br><br>
+                    <br /><br />
                     <b>Registering your room is easy, all you have to do is:</b>
                     <ol>
                         <li> <a href="http://rooms.powerup.org.au/become_a_host?t=NOT_AVAILABLE&utm_content=18631&utm_campaign=Have_a_spare_room_in_Sydney_for_PowerUp_&utm_source=blast&utm_medium=email" class="blue" target="_blank">Register your room here in less than 2 minutes</a></li>
@@ -426,11 +416,11 @@ PowerUp has put aside a limited scholarship fund. If you're passionate about att
             <div class="panel editable">
                 <p>
                     Are you travelling interstate and looking for a free room in Sydney to keep down costs? PowerUp has built a simple site that will connect folks looking for a spare room with Sydney GetUp members offering spare rooms. 
-                    <br><br>
+                    <br /><br />
                     <a href="http://rooms.powerup.org.au/available_rooms" class="blue" target="_blank">View our spare rooms directory here and get in touch with some generous hosts!</a>
-                    <br><br>
+                    <br /><br />
                     We hope you find a spare room, but unfortunately there are no guarantees. Please make a contingency plan as soon as possible to avoid disappointment. 
-                    <br><br>
+                    <br /><br />
                     Accommodation rates will rise the closer we get to September, so one idea is to book a reasonably priced room now that has a flexible, risk-free cancellation policy. It's possible to find rooms you can cancel within a few days of the booked date on sites such as: <a href="http://booking.com.au" class="blue" target="_blank">Booking.com</a>, <a href="http://airbnb.com" class="blue" target="_blank">Airbnb</a> and <a href="http://wotif.com.au" class="blue" target="_blank">Wotif</a>.
                 </p>
             </div>
